# aloecrypt_core

./: .gitignore  .technoproj  Cargo.toml  Makefile  README.md  api_core.json  build.rs
config/: api_core.json
doc/: api_core_docs.json  merge_docs.jq
generator/: gen_base.py  gen_py.py  gen_ts.py  meta.py  wire.py
script/: cargo_rs.mk
src/: bip39.rs  dsa.rs  fixed_byte.rs  galois.rs  hash.rs  kem.rs  lib.rs  password.rs  pkdf.rs  recovery.rs  reedsolomon.rs  rng.rs  shamir.rs  slip39.rs  totp.rs
